Popup choose item

--- a/src/assets/scss/components/pay-choose-form.scss
+++ b/src/assets/scss/components/pay-choose-form.scss
@@ -236,6 +236,6 @@ html[dir="rtl"]{
 		&__list,
 		&__fields{width: 100%;}
 		&__bottom{margin-top: 35px;}
-		&__btn{margin-top: 10px;}
+		&__btn{margin-top: 10px; padding-bottom: 20px;}
 	}
 }
