--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -19,6 +19,7 @@ block variables
 			{href: 'card-details.html',name:'Card details'},
 			{href: 'card-verification.html',name:'Card verification'},
 			{href: 'paymont-method-popup.html',name:'Paymont method popup'},
+			{href: 'popup-choose-item.html',name:'Popup choose item'},
 			{href: 'typography.html',name:'Typography'},
 		];
 
