--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -20,6 +20,7 @@ block variables
 			{href: 'card-verification.html',name:'Card verification'},
 			{href: 'paymont-method-popup.html',name:'Paymont method popup'},
 			{href: 'popup-choose-item.html',name:'Popup choose item'},
+			{href: 'product.html',name:'Popup order dish'},
 			{href: 'typography.html',name:'Typography'},
 		];
 
