--- a/src/pug/pages/typography.pug
+++ b/src/pug/pages/typography.pug
@@ -584,10 +584,10 @@ block content
 				//- 		+svg('ic-bank','ic-bank', '24', '24')
 				//- 	.type-icon__name ic-bank
 
-				//- .type-icon__item
-				//- 	.type-icon__img
-				//- 		+svg('ic-star','ic-star', '12', '12')
-				//- 	.type-icon__name ic-star
+				.type-icon__item
+					.type-icon__img
+						+svg('ic-star','ic-star', '12', '12')
+					.type-icon__name ic-star
 
 				//- .type-icon__item
 				//- 	.type-icon__img
