--- a/src/assets/scss/components/popup.scss
+++ b/src/assets/scss/components/popup.scss
@@ -6,7 +6,7 @@
 	border-radius: 12px;
 	box-shadow: 0px 12px 20px rgba(65, 65, 65, 0.25);
 	margin: 0 auto;
-	padding: 50px 40px 40px 20px;
+	padding: 50px 40px 20px 40px;
 	background: #fff;
 	position: fixed;
 	@include top-center;
@@ -52,11 +52,9 @@
 		}
 	}
 
-	// &__close_white{
-	// 	width: 26px;
-	// 	height: 26px;
-	// 	background: url(#{$path-icon}/ic-close-white.svg) no-repeat center;
-	// }
+	&__close_white{
+		.icon{fill: #fff;}
+	}
 
 	h1, .h1, h2, .h2{
 		text-align: center;
@@ -93,6 +91,8 @@
 		position: relative;
 		z-index: 2;
 	}
+
+	.product{margin: 0 -8px;}
 }
 
 @media (max-width: 767px) {
@@ -102,6 +102,14 @@
 		max-width: 100%;
 		max-height: 100%;
 		padding: 0;
+
+		&_mob-bot{
+			height: calc(100vh - 68px);
+			margin-top: 68px;
+			overflow-y: auto;
+
+			.popup{height: 100vh;}
+		}
 	}
 	
 	.popup{
@@ -208,6 +216,8 @@
 		.order-history{
 			width: 100%;
 		}
+
+		.product{margin: 0;}
 	}
 
 	html[dir="rtl"]{
