--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -21,6 +21,7 @@ block variables
 			{href: 'paymont-method-popup.html',name:'Paymont method popup'},
 			{href: 'popup-choose-item.html',name:'Popup choose item'},
 			{href: 'product.html',name:'Popup order dish'},
+			{href: 'profile.html',name:'Popup profile'},
 			{href: 'typography.html',name:'Typography'},
 		];
 
