--- a/src/pug/pages/typography.pug
+++ b/src/pug/pages/typography.pug
@@ -489,10 +489,10 @@ block content
 				//- 		+svg('ic-bin','ic-bin', '14', '16')
 				//- 	.type-icon__name ic-bin
 
-				//- .type-icon__item
-				//- 	.type-icon__img
-				//- 		+svg('ic-photo','ic-photo', '16', '14')
-				//- 	.type-icon__name ic-photo
+				.type-icon__item
+					.type-icon__img
+						+svg('ic-photo','ic-photo', '16', '14')
+					.type-icon__name ic-photo
 
 				//- .type-icon__item
 				//- 	.type-icon__img
@@ -633,6 +633,11 @@ block content
 				//- 	.type-icon__img
 				//- 		+svg('ic-theme','ic-theme', '28', '28')
 				//- 	.type-icon__name ic-theme
+
+				.type-icon__item
+					.type-icon__img
+						+svg('ic-exit','ic-exit', '20', '20')
+					.type-icon__name ic-exit
 
 				
 
