--- a/src/assets/scss/components/form-site.scss
+++ b/src/assets/scss/components/form-site.scss
@@ -421,6 +421,7 @@ html[dir="rtl"]{
 
 		&__btn{
 			margin-top: 35px;
+			padding-bottom: 20px;
 		}
 
 		&__field-wrap{
@@ -429,11 +430,12 @@ html[dir="rtl"]{
 		}
 
 		&__field-wrap &__field {
-			// width: calc(50% - 14px);
-			width: calc(33.33% - 14px);
+			width: calc(50% - 14px);
 			margin-left: 7px;
 			margin-right: 7px;
 		}
+
+		&__field-wrap_three &__field{width: calc(33.33% - 14px);}
 
 		&__field-wrap &__field_mob-full{
 			width: calc(100% - 14px);
@@ -513,6 +515,17 @@ html[dir="rtl"]{
 		height: 485px;
 
 		.select__option{max-height: 280px;}
+	}
+
+	.form-site-btn{
+		width: 100%;
+		padding: 60px 20px 20px;
+		background: linear-gradient(180deg, rgba(255, 255, 255, 0) -14.18%, #FFFFFF 82.47%);
+		text-align: center;
+		position: fixed;
+		bottom: 0;
+		left: 0;
+		z-index: 1010;
 	}
 
 	html[dir="rtl"]{
