Add new address

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -22,6 +22,7 @@ block variables
 			{href: 'popup-choose-item.html',name:'Popup choose item'},
 			{href: 'product.html',name:'Popup order dish'},
 			{href: 'profile.html',name:'Popup profile'},
+			{href: 'add-adress.html',name:'Add adress'},
 			{href: 'typography.html',name:'Typography'},
 		];
 
