--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -23,6 +23,7 @@ block variables
 			{href: 'product.html',name:'Popup order dish'},
 			{href: 'profile.html',name:'Popup profile'},
 			{href: 'add-adress.html',name:'Add adress'},
+			{href: 'popup-order-history.html',name:'Popup order history'},
 			{href: 'typography.html',name:'Typography'},
 		];
 
