--- a/src/pug/pages/typography.pug
+++ b/src/pug/pages/typography.pug
@@ -499,15 +499,15 @@ block content
 				//- 		+svg('ic-big-arrow','ic-big-arrow', '24', '24')
 				//- 	.type-icon__name ic-big-arrow
 
-				//- .type-icon__item
-				//- 	.type-icon__img
-				//- 		+svg('ic-world','ic-world', '16', '16')
-				//- 	.type-icon__name ic-world
+				.type-icon__item
+					.type-icon__img
+						+svg('ic-world','ic-world', '16', '16')
+					.type-icon__name ic-world
 
-				//- .type-icon__item
-				//- 	.type-icon__img
-				//- 		+svg('ic-cafe','ic-cafe', '16', '16')
-				//- 	.type-icon__name ic-cafe
+				.type-icon__item
+					.type-icon__img
+						+svg('ic-cafe','ic-cafe', '16', '16')
+					.type-icon__name ic-cafe
 
 				//- .type-icon__item
 				//- 	.type-icon__img
