--- a/src/assets/scss/layouts/main.scss
+++ b/src/assets/scss/layouts/main.scss
@@ -328,6 +328,7 @@ html[dir="rtl"]{
 	.d-md-block{display: block !important;}
 	.d-md-inline-block{display: inline-block !important;}
 	.d-md-flex{display: flex !important;}
+	.d-md-inline-flex{display: flex !important;}
 	.d-md-none{display: none !important;}
 }
 
