--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -7,6 +7,7 @@ block variables
 			{href: 'food-menu.html',name:'Food menu'},
 			{href: 'food-menu-popup.html',name:'Food menu popup + order'},
 			{href: 'food-menu-cards.html',name:'Food menu cards'},
+			{href: 'food-menu-mobile-order.html',name:'Food menu mobile order'},
 			{href: 'side-menu-mobile.html',name:'Side menu mobile'},
 			{href: 'login.html',name:'Login'},
 			{href: 'sms-code.html',name:'Sms code'},
