--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -43,7 +43,7 @@ block content
 				var pagelist = [
 					{href: 'food-menu-closed.html',name:'Food menu with timer closed'},
 					{href: 'food-menu-open.html',name:'Food menu with panel open'},
-					
+					{href: 'popup-combination.html',name:'Popup combination'},
 				];
 			ul
 				each page in pagelist
