popup-combination-one

--- a/src/assets/scss/layouts/main.scss
+++ b/src/assets/scss/layouts/main.scss
@@ -242,7 +242,7 @@ button.btn_border-grad{
 	margin: 2px;
 	background: #fbfbfb;
 	border-radius: 2.75rem;
-	color: #e34836;
+	color: $color-red;
 	transition: all 0.3s ease 0s;
 }
 
