--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -44,6 +44,7 @@ block content
 					{href: 'food-menu-closed.html',name:'Food menu with timer closed'},
 					{href: 'food-menu-open.html',name:'Food menu with panel open'},
 					{href: 'popup-combination.html',name:'Popup combination'},
+					{href: 'popup-combination-one.html',name:'Popup combination one'},
 				];
 			ul
 				each page in pagelist
