--- a/src/assets/scss/components/product.scss
+++ b/src/assets/scss/components/product.scss
@@ -292,6 +292,35 @@
 	}
 }
 
+.product-info{
+	text-align: center;
+	margin-bottom: 28px;
+
+	&__img{
+		margin-bottom: 30px;
+		padding-top: 28px;
+		padding-bottom: 20px;
+	}
+
+	&__img img{max-height: 100%;}
+
+	&__title{
+		@include font(normal, 500, 2rem, 1.2, $color-text);
+		margin-bottom: 10px;
+	}
+
+	&__price{
+		@include font(normal, 900, 2rem, 1.2, $color-text);
+		margin-bottom: 15px;
+	}
+
+	&__text{
+		max-width: 420px;
+		margin: 0 auto;
+		@include font(normal, normal, 1rem, 1.2, $color-grey);
+	}
+}
+
 html[dir="rtl"]{
 	.product{
 		&__info{
@@ -336,7 +365,7 @@ html[dir="rtl"]{
 
 @media (max-width: 767px) {
 	.product{
-		padding: 0 20px 150px;
+		padding: 0 20px 120px;
 		position: relative;
 
 		&__content{padding: 0;}
@@ -444,6 +473,31 @@ html[dir="rtl"]{
 		bottom: 0;
 		left: 0;
 		z-index: 1010;
+
+		.btn{min-width: 150px;}
+	}
+
+	.product-info{
+		&__img{
+			height: 95px;
+			padding: 0;
+			margin-top: 45px;
+			margin-bottom: 26px;
+		}
+
+		&__title{
+			font-size: 1.125rem;
+			margin-bottom: 6px;
+		}
+
+		&__price{
+			font-size: 1.25rem;
+			font-weight: 500;
+			margin-bottom: 8px;
+			color: $color-red;
+		}
+
+		&__text{font-size: 0.875rem;}
 	}
 
 	html[dir="rtl"]{
