--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -45,6 +45,8 @@ block content
 					{href: 'food-menu-open.html',name:'Food menu with panel open'},
 					{href: 'popup-combination.html',name:'Popup combination'},
 					{href: 'popup-combination-one.html',name:'Popup combination one'},
+					{href: 'profile-tabs.html',name:'Profile with tabs'},
+					{href: 'profile-tabs-cards.html',name:'Profile cards with tabs'},
 				];
 			ul
 				each page in pagelist
