--- a/src/pug/pages/typography.pug
+++ b/src/pug/pages/typography.pug
@@ -304,6 +304,22 @@ block content
 							.prod-check__img
 								img(src='assets/img/'+item.img, alt='')
 
+			br
+			br
+			br
+			.h2 Tabs
+			.tabs-page
+				.tabs-page__list
+					.tabs-page__item.active Tab 1
+					.tabs-page__item Tab 2
+					.tabs-page__item Tab 3
+					.tabs-page__item Tab 4
+
+				.tabs-page__content
+					.tabs-page__content-item.active Text 1
+					.tabs-page__content-item Text 2
+					.tabs-page__content-item Text 3
+					.tabs-page__content-item Text 4
 
 
 			br
