--- a/src/assets/scss/components/popup.scss
+++ b/src/assets/scss/components/popup.scss
@@ -253,6 +253,15 @@
 		.cat-coupon__title{text-align: left;}
 
 		.tabs-page{margin: 0 -20px;}
+
+		.credit-card-wrap{
+			&_auto{height: auto;}
+	
+			.credit-card{
+				height: auto;
+				padding-bottom: 20px;
+			}
+		}
 	}
 
 	.tabs-page-profile{
