--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -47,6 +47,7 @@ block content
 					{href: 'popup-combination-one.html',name:'Popup combination one'},
 					{href: 'profile-tabs.html',name:'Profile with tabs'},
 					{href: 'profile-tabs-cards.html',name:'Profile cards with tabs'},
+					{href: 'card-details2.html',name:'Card details'},
 				];
 			ul
 				each page in pagelist
