--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -48,6 +48,7 @@ block content
 					{href: 'profile-tabs.html',name:'Profile with tabs'},
 					{href: 'profile-tabs-cards.html',name:'Profile cards with tabs'},
 					{href: 'card-details2.html',name:'Card details'},
+					{href: 'upsell.html',name:'Upsell'},
 				];
 			ul
 				each page in pagelist
