--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -49,6 +49,8 @@ block content
 					{href: 'profile-tabs-cards.html',name:'Profile cards with tabs'},
 					{href: 'card-details2.html',name:'Card details'},
 					{href: 'upsell.html',name:'Upsell'},
+					{href: 'member-club.html',name:'Member club'},
+					{href: 'member-club-coins.html',name:'Member club gey coins'},
 				];
 			ul
 				each page in pagelist
