--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -50,7 +50,8 @@ block content
 					{href: 'card-details2.html',name:'Card details'},
 					{href: 'upsell.html',name:'Upsell'},
 					{href: 'member-club.html',name:'Member club'},
-					{href: 'member-club-coins.html',name:'Member club gey coins'},
+					{href: 'member-club-coins.html',name:'Member club get coins'},
+					{href: 'member-club-benefits.html',name:'Member club benefits'},
 				];
 			ul
 				each page in pagelist
